fix: no wrap lecture code

--- a/src/pages/lectures/LecturesPage.scss
+++ b/src/pages/lectures/LecturesPage.scss
@@ -39,6 +39,7 @@
             margin-left: s(3);
             color: $eodiro-green-2;
             font-size: b(1);
+            white-space: nowrap;
           }
         }
 
